--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,6 +8,12 @@
 	src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
 }
 
+html, body, #app {
+	height: 100%;
+	overflow: hidden;
+}
+
 body {
 	font-family: "system", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+	font-size: .9rem;
 }
