--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -11,17 +11,19 @@ header {
 	}
 
 	.control-panel {
+		display: flex;
+		justify-content: space-around;
+		padding: 10px 0;
+
 		.player-controls {
 			position: relative;
 			color: #333;
-			background-color: #fff;
+			background-color: #fcfcfc;
 			border-radius: 6px;
 			width: 200px;
 			height: 40px;
 			z-index: 5;
 			margin-left: 15px;
-			box-shadow: 0px 20px 20px 5px rgba(132, 132, 132, 0.3);
-			opacity: 0.8;
 
 			.album-art {
 				position: absolute;
@@ -56,11 +58,33 @@ header {
 				}
 			}
 		}
-	}
-}
 
-.rc-slider {
-	.rc-slider-handle, .rc-slider-track {
-		transition: .05s all;
+		.status-bar, .volume-bar {
+			width: 50%;
+			background: #fcfcfc;
+			padding: 5px 20px;
+			color: #000;
+			margin-right: 20px;
+			font-size: 0.7rem;
+			border-radius: 5px;
+		}
+
+		.volume-bar {
+			width: 10%;
+		}
+
+		.seekbar {
+			.rc-slider {
+				&-handle {
+					display: none;
+					transition: .05s all;
+				}
+
+				&-track {
+					transition: .05s all;
+					background-color: #668fc1;
+				}
+			}
+		}
 	}
 }
