--- a/src/scss/library.scss
+++ b/src/scss/library.scss
@@ -3,7 +3,9 @@ $thumbnail-title-height: 20px;
 $thumbnail-height: $thumbnail-cover-height + $thumbnail-title-height;
 $thumbnail-width: 150px;
 $album-details-transition: .2s height;
-$album-details-height: 200px;
+$album-details-height: 320px;
+$cover-width: 280px;
+$cover-height: 280px;
 
 .library {
 	position: relative;
@@ -41,7 +43,7 @@ $album-details-height: 200px;
 
 			.album-details {
 				position: absolute;
-				background: #3d72b4;
+				background: #f9f9f9;
 				top: auto;
 				left: 0;
 				width: 100%;
@@ -50,14 +52,63 @@ $album-details-height: 200px;
 				height: 0;
 				overflow: hidden;
 				transition: $album-details-transition;
+				box-shadow: inset 0 11px 8px -10px #ddd, inset 0 -11px 8px -10px #ddd;
 
 				.album-details-inner {
-					padding: 10px;
+					padding: 20px;
+
+					.cover {
+						display: inline-block;
+						vertical-align: top;
+						background: #43a047;
+						height: $cover-height;
+						width: $cover-width;
+						border-radius: 5px;
+					}
+
+					.album-content {
+						display: inline-block;
+						width: calc(100% - #{$cover-width});
+						padding-left: 20px;
+						font-size: 0.8rem;
+
+						.songs-list {
+							columns: 2;
+							-webkit-columns: 2;
+
+							.song {
+								padding: 6px 0;
+								border-bottom: 1px solid #eee;
+								break-inside: avoid-column;
+
+								.play {
+									color: #666;
+								}
+
+								.song-title {
+									padding-left: 10px;
+								}
+							}
+						}
+					}
 				}
 			}
 
 			&.expanded {
 				height: $thumbnail-height + $album-details-height;
+
+				.album-thumbnail:after {
+					top: auto;
+					content: '';
+					height: 0;
+					width: 0;
+					position: absolute;
+					border: solid transparent;
+					border-bottom-color: #e6e6e6;
+					border-width: 11px;
+					left: 50%;
+					margin: -11px 0 0 -15px;
+				}
 
 				.album-details {
 					height: $album-details-height;
