--- a/src/renderer/scss/header.scss
+++ b/src/renderer/scss/header.scss
@@ -61,7 +61,7 @@ header {
 
 		.status-bar, .volume-bar {
 			width: 50%;
-			background: #fcfcfc;
+			background: #fcfcfc00;
 			padding: 5px 20px;
 			color: #000;
 			margin-right: 20px;
@@ -87,4 +87,29 @@ header {
 			}
 		}
 	}
+}
+
+.player-spectrum {
+	position: absolute;
+	height: 200px;
+	-webkit-filter: url("#goo-no-comp");
+	width: 100%;
+	overflow: hidden;
+	zoom: 0.5;
+	top: 0;
+
+	.player-spectrum-bars {
+		display: flex;
+	}
+
+	.player-spectrum-bar {
+		display: inline-block;
+		background: #4f0000;
+		flex: 1 1 auto;
+		align-self: flex-end;
+	}
+}
+
+.control-panel svg {
+	display: none;
 }
