--- a/src/renderer/scss/library.scss
+++ b/src/renderer/scss/library.scss
@@ -11,6 +11,7 @@ $cover-height: 280px;
 	position: relative;
 	height: 100%;
 	overflow-y: auto;
+	background: #fff;
 
 	.albums-grid {
 		padding: 10px;
