--- a/src/renderer/scss/app.scss
+++ b/src/renderer/scss/app.scss
@@ -1,4 +1,9 @@
-@import "grid-kit/scss/grid-kit";
+// @import "grid-kit/scss/grid-kit";
+@import "grid-kit/scss/reset";
+@import "grid-kit/scss/variables";
+@import "grid-kit/scss/mixins";
+@import "grid-kit/scss/content";
+@import "grid-kit/scss/utilities";
 @import "icofont/icofont.css";
 
 @font-face {
@@ -16,4 +21,8 @@ html, body, #app {
 body {
 	font-family: "system", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	font-size: .9rem;
+}
+
+* {
+	user-select: none !important;
 }
