--- a/src/renderer/components/content/content.scss
+++ b/src/renderer/components/content/content.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "splitpane";
+@import "../../scss/variables";
+@import "../../scss/splitpane";
 
 main.content {
 	height: calc(100% - #{$header-height});
