Playlists to play songs in order

--- a/src/renderer/components/header/visualizer.scss
+++ b/src/renderer/components/header/visualizer.scss
@@ -15,7 +15,7 @@
 
  	.player-spectrum-bar {
 		display: inline-block;
-		background: #ff6824;
+		background: #7e57c2;
 		flex: 1 1 auto;
 		align-self: flex-end;
 		height: 296px;
