--- a/src/renderer/components/header/header.scss
+++ b/src/renderer/components/header/header.scss
@@ -4,7 +4,7 @@ header {
 	background: rgba(75, 0, 255, 0.2);
 	//background: -webkit-linear-gradient(to right, #525252, #3d72b4);
 	//background: linear-gradient(to right, #525252, #3d72b4);
-	background: linear-gradient(to right, rgba(82, 82, 82, 0.6), rgba(61, 114, 180, 0.6));
+	background: linear-gradient(to right, rgba(40, 40, 40, 0.9), rgba(25, 50, 80, 0.9));
 
 	.titlebar {
 		-webkit-user-select: none;
@@ -86,15 +86,22 @@ header {
 
 			.rc-slider {
 				&-handle {
-					border: solid 2px #668fc1;
+					border: none;
+					background: #ff9800;
+					box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
+					cursor: default;
 
 					&:focus {
-						box-shadow: none;
+						// box-shadow: none;
 					}
 				}
 
 				&-track {
-					background-color: #668fc1;
+					background-color: #ff9800;
+				}
+
+				&-rail {
+					background-color: #e9e9e950;
 				}
 			}
 		}
@@ -104,13 +111,29 @@ header {
 
 			.rc-slider {
 				&-handle {
-					display: none;
+					// content: ' ';
+					// top: 1px;
+					// right: 0;
+					// position: absolute;
+					display: block;
+					background: #ff9800;
+					width: 5px;
+					height: 2px;
+					margin-top: 1px;
+					margin-left: -2px;
+					border: none;
+					box-shadow: #ff9800 1px 0 4px 1px;
 					transition: .05s all;
+					cursor: default;
 				}
 
 				&-track {
 					transition: .05s all;
-					background-color: #668fc1;
+					background-color: #ff9800;
+				}
+
+				&-rail {
+					background-color: #e9e9e950;
 				}
 			}
 		}
