--- a/src/renderer/scss/icofont/icofont.css
+++ b/src/renderer/scss/icofont/icofont.css
@@ -12,8 +12,8 @@
   font-family: "IcoFont";
 font-weight: normal;
 font-style: "Regular";
-src: url("fonts/icofont.woff2") format("woff2"),
-url("fonts/icofont.woff") format("woff");
+src: url("./fonts/icofont.woff2") format("woff2"),
+url("./fonts/icofont.woff") format("woff");
 }
 
 [class^="icofont-"], [class*=" icofont-"]
@@ -56,6 +56,11 @@ url("fonts/icofont.woff") format("woff");
 .icofont-ui-next:before
 {
   content: "\ec6e";
+}
+
+.icofont-square-left:before
+{
+  content: "\eabb";
 }
 
 .icofont-xs
