--- a/src/renderer/components/content/content.scss
+++ b/src/renderer/components/content/content.scss
@@ -10,3 +10,13 @@ main.content {
 .collapsed .Pane1 {
 	display: none;
 }
+
+.Pane1 {
+	position: absolute !important;
+	height: 100%;
+	z-index: 999;
+}
+
+.tablet .Pane1 {
+	position: relative !important;
+}
