--- a/src/renderer/scss/variables.scss
+++ b/src/renderer/scss/variables.scss
@@ -1,2 +1,4 @@
+$titlebar-height: 22px;
 $header-height: 75px;
-$footer-height: 25px;
+$footer-height: 0px;
+$footer-height-tablet: $footer-height + 25px;
