--- a/src/renderer/components/content/content.scss
+++ b/src/renderer/components/content/content.scss
@@ -2,7 +2,7 @@
 @import "../../scss/splitpane";
 
 main.content {
-	height: calc(100% - #{$header-height} - #{$footer-height});
+	height: calc(100% - #{$titlebar-height} - #{$header-height} - #{$footer-height});
 	position: relative;
 	font-size: 0.8rem;
 }
@@ -17,6 +17,12 @@ main.content {
 	z-index: 999;
 }
 
-.tablet .Pane1 {
-	position: relative !important;
+.tablet {
+	main.content {
+		height: calc(100% - #{$header-height} - #{$footer-height-tablet});
+	}
+
+	.Pane1 {
+		position: relative !important;
+	}
 }
