--- a/src/renderer/components/footer/Footer.scss
+++ b/src/renderer/components/footer/Footer.scss
@@ -11,12 +11,25 @@ footer {
 
 	.toggler {
 		display: inline-block;
-		font-size: 1rem;
-		color: #627386;
 		transition: transform .2s;
+
+		position: absolute;
+		font-size: 2rem;
+		color: #ddd;
 
 		&.hidden {
 			transform: scaleX(-1);
 		}
+	}
+}
+
+.tablet footer {
+	height: $footer-height-tablet;
+
+	.toggler {
+		position: relative;
+		bottom: initial;
+		font-size: 1rem;
+		color: #627386;
 	}
 }
