--- a/src/renderer/components/header/header.scss
+++ b/src/renderer/components/header/header.scss
@@ -1,5 +1,13 @@
 @import "../../scss/variables";
 
+$album_art_width: 60px;
+
+.title-bar {
+	-webkit-user-select: none;
+	-webkit-app-region: drag;
+	min-height: $titlebar-height;
+}
+
 header {
 	min-height: $header-height;
 	color: #fff;
@@ -8,11 +16,7 @@ header {
 	//background: linear-gradient(to right, #525252, #3d72b4);
 	background: linear-gradient(to right, rgba(40, 40, 40, 0.9), rgba(25, 50, 80, 0.9));
 	order: 1;
-
-	.titlebar {
-		-webkit-user-select: none;
-		-webkit-app-region: drag;
-	}
+	z-index: 100;
 
 	.control-panel {
 		display: flex;
@@ -20,78 +24,165 @@ header {
 		flex-wrap: wrap;
 		position: relative;
 
+		.item {
+			width: 33%;
+			min-height: 60px;
+			text-align: center;
+		}
+
+		.control-home {
+			order: 1;
+		}
+
 		.player-controls {
 			position: relative;
-			color: #333;
-			background-color: #fcfcfc40;
-			border-radius: 6px;
-			width: 200px;
-			height: 40px;
-			z-index: 5;
-			margin-left: 15px;
+			z-index: 10;
+			order: 2;
+
+			.controls-wrapper {
+				position: absolute;
+				left: 50%;
+				transform: translateX(-50%);
+				background: rgba(25, 50, 80, 0);
+				border-radius: 30px;
+				width: 100%;
+				height: 60px;
+				bottom: 0;
+				// transition: all .1s;
+				// filter: url(#goo);
+			}
 
 			.album-art {
 				position: absolute;
-				top: 50%;
-				left: -5px;
-				transform: translateY(-50%);
-				width: 60px;
-				height: 60px;
+				left: 50%;
+				bottom: 0;
+				width: $album_art_width;
+				height: $album_art_width;
 				border-radius: 50%;
 				background: #eee;
 				border: 2px solid #6b0d0d;
 				overflow: hidden;
+				transform: translateX(-50%);
 			}
 
 			.controls {
-				display: flex;
-				justify-content: flex-end;
-				height: 40px;
-				padding: 0 15px;
+				position: absolute;
+				left: 50%;
+				bottom: 30px;
 
-				.prev, .play, .next {
-					width: 40px;
-					height: auto;
-					border-radius: 10px;
-					background-position: center center;
-					background-repeat: no-repeat;
-					background-size: 20px;
-					padding: 8px 0;
-					//background-color: #fff;
-					cursor: pointer;
-					transition: background-color .3s ease;
-					-webkit-transition: background-color .3s ease;
+				.control-item {
+					position: absolute;
+					width: 0;
+					height: 0;
+				}
+
+				.control-button {
+					position: absolute;
+					width: 50px;
+					height: 50px;
+					border-radius: 50%;
+					margin-left: -25px;
+					margin-top: -25px;
+					top: 0;
+					left: 0;
+					color: #374158;
+					background: #7c8ca0;
+					transform: translate3d(0px, 0px, 0px);
+					transition: all .2s;
+					border: none;
+
+					i {
+						display: inline-block;
+					}
+				}
+
+				.prev {
+					transform: rotate(130deg);
+					.control-button i {
+						transform: rotate(-130deg);
+					}
+				}
+
+				.play {
+					transform: rotate(180deg);
+					.control-button i {
+						transform: rotate(-180deg);
+					}
+				}
+
+				.next {
+					transform: rotate(230deg);
+					.control-button i {
+						transform: rotate(-230deg);
+					}
+				}
+			}
+
+			&:hover {
+				.controls-wrapper {
+					height: 200px;
+				}
+				.control-button {
+					transform: translate3d(0px, 73px, 0px);
 				}
 			}
 		}
 
-		.status-bar, .volume-bar {
-			display: flex;
-			flex-flow: row wrap;
-			align-items: flex-end;
-			width: 50%;
-			background: #fcfcfc00;
-			color: #fff;
-			font-size: 0.7rem;
-			border-radius: 5px;
-			z-index: 5;
-		}
-
-		.status-bar .sound-title {
-			text-overflow: ellipsis;
-			overflow: hidden;
-			white-space: nowrap;
-		}
-
 		.status-bar {
 			width: 100%;
-			order: 2;
+			order: 0;
+			font-size: .7rem;
+			z-index: 5;
+
+			.sound-details {
+				visibility: hidden;
+				height: 0;
+			}
+
+			.sound-title {
+				text-overflow: ellipsis;
+				overflow: hidden;
+				white-space: nowrap;
+			}
 		}
 
 		.volume-bar {
-			width: 10%;
+			position: relative;
+			order: 2;
+
+			.volume-wrapper {
+				position: absolute;
+				width: 50px;
+				height: 50px;
+				left: 50%;
+				bottom: 4px;
+				transform: translateX(-50%);
+				background: rgba(25, 50, 80, 0);
+				border-radius: 30px;
+				transition: all .1s;
+			}
+
+			.speaker {
+				font-size: 2rem;
+				line-height: 32px;
+				bottom: 0;
+				position: absolute;
+				left: 50%;
+				height: 52px;
+				transform: translateX(-50%);
+				display: block;
+				padding: 10px;
+			}
 
 			.rc-slider {
+				visibility: hidden;
+				transition: all .1s;
+				position: absolute;
+				bottom: 30px;
+				left: 40%;
+				transform: scale(0) translateX(-50%);
+				height: 60%;
+
 				&-handle {
 					border: none;
 					background: #ff9800;
@@ -111,18 +202,28 @@ header {
 					background-color: #e9e9e950;
 				}
 			}
+
+			&:hover, &.show{
+				.volume-wrapper {
+					height: 150px;
+					background: rgba(25, 50, 80, 0.8);
+				}
+
+				.rc-slider {
+					bottom: 45px;
+					left: 50%;
+					transform: scale(1) translateX(-50%);
+					visibility: visible;
+				}
+			}
 		}
 
 		.seekbar {
 			width: 100%;
-			margin-bottom: -19px;
+			margin-top: -5px;
 
 			.rc-slider {
 				&-handle {
-					// content: ' ';
-					// top: 1px;
-					// right: 0;
-					// position: absolute;
 					display: block;
 					background: #ff9800;
 					width: 5px;
@@ -149,5 +250,119 @@ header {
 }
 
 .tablet header {
+	$controls_width: 200px;
+	$volume_bar_width: 150px;
+	$total_gap: 200px;
+
 	order: 0;
+	overflow: hidden;
+
+	.control-panel {
+		padding-top: 7px;
+	}
+
+	.control-home {
+		display: none;
+	}
+
+	.player-controls {
+		width: $controls_width;
+
+		.album-art {
+			left: 0;
+			transform: translateX(0);
+		}
+
+		.controls {
+			left: $album_art_width / 2;
+			position: relative;
+			bottom: unset;
+			width: 150px;
+			text-align: right;
+			margin-top: 11px;
+			background: #7c8ca0;
+			border-radius: 10px;
+
+			.control-item {
+				position: relative;
+				width: unset;
+				height: unset;
+				display: inline-block;
+			}
+
+			.control-button {
+				position: relative;
+				margin: 0;
+				width: 40px;
+				height: 40px;
+			}
+		}
+
+		&:hover .controls-wrapper {
+			height: 60px;
+
+			.control-button {
+				transform: unset;
+			}
+		}
+	}
+
+	.status-bar {
+		order: 2;
+		width: calc(100% - #{$controls_width} - #{$volume_bar_width} - #{$total_gap});
+
+		.sound-details {
+			min-height: 40px;
+			padding-top: 12px;
+			visibility: visible;
+		}
+	}
+
+	.volume-bar {
+		max-width: $volume_bar_width;
+		padding-top: 22px;
+
+		.volume-wrapper {
+			position: relative;
+			width: unset;
+			bottom: 0;
+			height: 100%;
+		}
+
+		.speaker {
+			font-size: initial;
+			width: 30px;
+			position: relative;
+			display: inline-block;
+			left: 0;
+			padding: 0 10px 0 0;
+			transform: none;
+			line-height: 16px;
+			height: 16px;
+		}
+
+		.rc-slider {
+			visibility: visible;
+			transform: scale(1);
+			width: calc(100% - 30px);
+			bottom: 3px;
+			left: 0;
+			position: relative;
+			display: inline-block;
+			height: unset;
+		}
+
+		&:hover, &.show{
+			.volume-wrapper {
+				height: initial;
+				background: none;
+			}
+
+			.rc-slider {
+				bottom: 3px;
+				left: 0;
+				transform: none;
+			}
+		}
+	}
 }
