--- a/src/renderer/scss/icofont/icofont.css
+++ b/src/renderer/scss/icofont/icofont.css
@@ -63,6 +63,11 @@ url("./fonts/icofont.woff") format("woff");
   content: "\eabb";
 }
 
+.icofont-ui-volume:before
+{
+  content: "\ec94";
+}
+
 .icofont-xs
 {
   font-size: .5em;
