--- a/src/renderer/components/content/content.scss
+++ b/src/renderer/components/content/content.scss
@@ -6,3 +6,18 @@ main.content {
 	position: relative;
 	font-size: 0.8rem;
 }
+
+.gutter {
+    background-color: #eee;
+
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
+
+.gutter.gutter-horizontal {
+    cursor: col-resize;
+}
+
+.gutter.gutter-vertical {
+    cursor: row-resize;
+}
