--- a/src/renderer/components/header/header.scss
+++ b/src/renderer/components/header/header.scss
@@ -138,6 +138,7 @@ header {
 			.sound-details {
 				visibility: hidden;
 				height: 0;
+				overflow: hidden;
 			}
 
 			.sound-title {
@@ -249,6 +250,20 @@ header {
 			}
 		}
 	}
+
+	.time {
+		font-size: 0.6rem;
+		opacity: 0.4;
+
+		.current {
+			display: inline-block;
+		}
+
+		.duration {
+			display: inline-block;
+			float: right;
+		}
+	}
 }
 
 .tablet header {
@@ -314,7 +329,7 @@ header {
 		width: calc(100% - #{$controls_width} - #{$volume_bar_width} - #{$total_gap});
 
 		.sound-details {
-			min-height: 40px;
+			min-height: 42px;
 			padding-top: 12px;
 			visibility: visible;
 		}
